# FreeRTOS-QEMU

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  linker.ld  main.c  startup.s
